# nobias

./: .gitignore  .readthedocs.yaml  .token.txt  HowTo.md  LICENSE  Makefile  README.md  lumache.py  pyproject.toml  requirements.txt  tutorial.py
docs/: requirements.txt
docs/source/: api.rst  auditTutorial.rst  audits.rst  conf.py  explanation.rst  explanationTutorial.rst  index.rst  installation.rst  modules.rst  nobias.rst  usage.rst
nobias/: __init__.py  audits.py  distributionShift.py  explanation.py  explanationShift.py
src/nobias/explanations/: explanation.py
tests/: test_audit.py  test_explanation.py  test_explanationshift.py
