[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nobias"
version = "0.0.1"
authors = [
  { name="Carlos Mougan", email="carmougan@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nobias-project/nobias"
"Bug Tracker" = "https://github.com/nobias-project/nobiasissues"