[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nobias"
version = "0.1.4"
authors = [
  { name="Carlos Mougan", email="carmougan@gmail.com" },
]
description = "NoBias AI without Bias"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nobias-project/nobias"
"Bug Tracker" = "https://github.com/nobias-project/nobiasissues"